syntax = "proto3";

service HbmService {
	rpc StartNormalMeasurement (Void) returns (Void) {};
	rpc StartIrregularMeasurement (Void) returns (Void) {};
	rpc StopMeasurement (Void) returns (Void) {};
	rpc SendHbmData (stream  HbmDataRequest) returns (stream Void) {};
	rpc SendIrregularityAlert (HbmAlertRequest) returns (Void) {};
}

message Void {}

message HbmData {
	float milisecond = 1;
	float milivolt = 2;
}

message HbmDataRequest {
	HbmData hbmData = 1;
}

message HbmAlert {
	string message = 1;
}

message HbmAlertRequest {
	string message = 1;
}